internal/xds/translator/testdata/out/xds-ir/jsonpatch-with-jsonpath.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    rateLimits:
    - actions:
      - remoteAddress: {}
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: user
          stringMatch:
            exact: james
        - name: country
          stringMatch:
            exact: US
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - connectConfig: {}
          upgradeType: CONNECT
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        another-filter-per-filter-config:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.filter_chain.eep.listener:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          disabled: true
        envoy.filters.http.filter_chain.eep.route:
          '@type': type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfigPerRoute
          filterChain:
            filters:
            - name: envoy.filters.http.wasm/0
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                config:
                  configuration:
                    '@type': type.googleapis.com/google.protobuf.StringValue
                    value: '{"parameter1":{"key1":"value1"},"parameter2":{"key2":{"key3":"value3"}}}'
                  failOpen: true
                  name: wasm-filter-4
                  vmConfig:
                    code:
                      remote:
                        httpUri:
                          cluster: wasm_cluster
                          timeout: 10s
                          uri: https://envoy-gateway:18002/fe571e7b1ef5dc626ceb2c2c86782a134a92989a2643485238951696ae4334c3.wasm
                        retryPolicy:
                          numRetries: 10
                          retryBackOff:
                            baseInterval: 1s
                            maxInterval: 30s
                        sha256: a1f0b78b8c1320690327800e3a5de10e7dbba7b6c752e702193a395a52c727b6
                    runtime: envoy.wasm.runtime.v8
                    vmId: envoyextensionpolicy/default/policy-for-http-route/wasm/0
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/1/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        another-filter-per-filter-config:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
